# tokenbound_impl

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  package-lock.json  package.json
soroban-contract/: .gitignore  Cargo.toml
soroban-contract/contracts/event_manager/: Cargo.toml
soroban-contract/contracts/event_manager/src/: lib.rs  test.rs
soroban-contract/contracts/event_manager/test_snapshots/test/: test_batch_purchase_refund_uses_total_paid.1.json  test_cancel_event.1.json  (+35 more)
soroban-contract/contracts/marketplace/: Cargo.toml
soroban-contract/contracts/marketplace/src/: lib.rs
soroban-contract/contracts/tba_account/src/: lib.rs  test.rs
soroban-contract/contracts/tba_registry/src/: lib.rs  test.rs
soroban-contract/contracts/ticket_factory/src/: lib.rs
soroban-contract/contracts/ticket_nft/src/: lib.rs  test.rs
soroban-contract/deployments/: .gitignore
soroban-contract/scripts/: README.md  deploy.sh
soroban-contract/tests/integration/: Cargo.toml
soroban-contract/tests/integration/src/: lib.rs
soroban-contract/tests/integration/test_snapshots/: test_cancel_event_and_claim_refund.1.json  test_create_tba_and_execute_through_it.1.json  test_double_refund_fails.1.json  test_factory_tracks_deployed_contracts.1.json  test_full_happy_path_purchase_and_create_tba.1.json  test_purchase_canceled_event_fails.1.json  test_purchase_sold_out_event.1.json  test_refund_fails_for_non_buyer.1.json  test_refund_fails_if_event_not_canceled.1.json  test_transfer_ticket_and_new_owner_creates_tba.1.json
(+110 files in other folders)
