[workspace]
resolver = "2"
members = [
  "contracts/tba_account",
  "contracts/tba_registry",
  "contracts/ticket_nft",
  "contracts/ticket_factory",
  "contracts/event_manager",
  "contracts/marketplace",
  "tests/integration",
]
exclude = ["contracts/hello-world"]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true